2009-10-16 Roman
- FIX:UI.Vision: Rule mouse events to underlie widgets is made.
- UI.Vision, UI.WebVision: Automatic cancel, after five second, is added for edited line of primitive "FormEl".
- !!:FIX:DAQ.JavaLikeCalc: Using functions for parameters from function's IO is fixed for first using time.


2009-10-14 Roman
- SYS: RPM-build spec-files is fixed and adapted for build version 0.6.4.
- FIX:DAQ.BlockCalc: Ordering blocks calc mechanism is fixed and expanded.
- FIX:DAQ.JavaLikeCalc: Type casting for second argument is fixed if first argument is Object's function result.
    The controller function's IO values restoring is fixed after IO configuration changing.
- UI.QTCfg: Eval display is added for digital values.
- !!:UI.VCAEngine, UI.Vision, UI.WebVision: Full diagramm scaling support is added.
- FIX:UI.Vision, UI.WebVision: Hide widgets on view permission absence is fixed.
- UI.Vision: Hide "No style" messages in RunTime.


2009-10-12 Roman 0.6.4
- DemoDB: Updated for new stufs.
- SYS: Splash image is updated.
- SYS: RPM build spec file is adapted for 0.6.4 building.
- !!:/DOC: TODO and README documents is updated.


2009-10-11 Roman
- FIX:SYS: RPMs build spec-file for multiple modules is fixed.
- !!:DAQ.BlockCalc: Ordering into blocks calc is added.
- FIX:DAQ.ICP_DAS: Module's I-8042W inputs inversion is added.
- !!:DAQ.JavaLikeCalc: Fields setting for controller's parametrs is expanded.
- FIX:Special.FLibComplex1, Special.FLibMath, Special.FLibSYS: Functions is enabled in time module enabling.
- !!!:Transport.Sockets: Keep-alive limits is added. Priority set is added for transport's tasks.
- FIX:UI.VCAEngine: The attribute "docAMess" of primitive "Document" processing is fixed.
- !!:UI.Vision, UI.WebVision: Full support the alarms is finished for primitive "Protocol".
- UI.Vision: Vertical scroll position saving is added for primitive "Document".
- FIX:UI.Vision: Collumns and rows resizing is fixed for primitive "Protocol".